# SurfaceGrinderAutomaton

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txtbak  CMakePresets.json  clean.sh  compile_commands.json  debug.bat  debugprobe.uf2  flash.sh  flash_bmp.sh  pi-pico.code-workspace  prj.conf  readme.md  sga.code-workspace  sga_debug_port.inf  waveshare-rp2040-zero-debugprobe.uf2  zephyr-template.code-workspace
.devcontainer/: 99-picoprobe.rules  Dockerfile  cmake.kits.json  devcontainer.json  pi_pico.sh
.devcontainer/zephyr/: Dockerfile
bak/: CMakeLists.txt  build.sh
bak/Usb/: WebSerial.cpp  WebSerial.hpp  usb.cpp  usb.hpp  usb_descriptors.c
bak/XHC-WB04b06/: pendant.cc  pendant.h  usb.cc  usb.h  xhc-whb04b6.cc  xhc-whb04b6.h
bak/boards/: rpi_pico.cfg
bak/src/: Display.cpp  Display.hpp  Helpers.hpp  lv_conf.h  main.cpp
bak/src/Motion/: XAxis.hpp
bak/src/drivers/Motor/: Stepper.cpp
board/: picoprobe.cfg  rp2040.cfg
boards/: blackpill_f401ce.overlay  blackpill_f411ce.overlay  esp32_devkitc_wroom_procpu.overlay  esp32s2_lolin_mini.overlay  esp32s3_devkitc.overlay  esp32s3_devkitm.overlay  rpi_pico.overlay  stm32f411ce.openocd.cfg
dts/bindings/: generic-pwm.yaml  pwm-stepper.yaml  rpm-input.yaml
pio/: stepper.pio
src/: Axis.cpp  Axis.hpp  CMakeLists.txt  Display.cpp  Enum.hpp  FreeRTOSConfig.h  FreeRTOS_Helpers.c  Helpers.hpp  MotionController.cpp  MotionController.hpp  SurfaceGrinderAtomaton.cpp  SurfaceGrinderAtomaton.cpp.examples  TaskStats.cpp  TaskStats.hpp  config.hpp  main.cpp
src/Console/: CRC.hpp  Console.cpp  Console.hpp  Proto.cpp  Proto.hpp  WebSerial.cpp  WebSerial.hpp  microrl_config.h  usb.cpp  usb.hpp
src/Motion/: Axis.cpp  Axis.hpp  MotionController.cpp  MotionController.hpp  SM.hpp  UnitConverter.cpp  UnitConverter.hpp  XAxis.cpp  XAxis.hpp
src/Motion/MovementPlanner/: Planner.hpp  Reciprocate.hpp
src/Motion/XAxis/: SM.cpp  SM.hpp
src/Motion/ZAxis/: MovementMode.cpp  MovementMode.hpp  RepeatMode.cpp  RepeatMode.hpp  SM.cpp  SM.hpp
src/Ui/ControlPanel/Display/: Display.cpp  Display.hpp
src/Ui/ControlPanel/GPIO/: GPIO.cpp  GPIO.hpp
src/Usb/: Proto.cpp  Proto.hpp  WebSerial.cpp  WebSerial.hpp  usb.cpp  usb.hpp  usb_descriptors.c
src/debug/Console/: Console.cpp  Console.hpp  microsh_config.h  tusb_config.h  usb.cpp  usb.hpp  usb_descriptors.c
src/drivers/Motor/: Stepper.cpp  Stepper.hpp
src/usb/: usb.cpp  usb.hpp  usb_descriptors.c  usb_descriptors.h
tests/: CMakeLists.txt
tests/src/: test.cpp  unity_config.h
tools/linux/: 99-tinyusb.rules  flash.sh  picotool  reset.sh
tools/win64/: attach-bmp.bat  attach-cmsis.bat  elevate.ps1  flash.bat
web/: package.json
web/Surface-Grinder-Automaton/app/: layout.tsx  page.tsx
web/Surface-Grinder-Automaton/components/: SerialComponent.tsx  navbar.tsx  serial.ts
web/app/: page.tsx
web/app/config/: page.tsx
web/app/console/: page.tsx
web/app/control/: page.tsx
web/components/: USBConnection.tsx  navbar.tsx  usb.ts
web/config/: site.ts
